--- a/src/main/resources/com/example/csit228_f1_v2/homepage.fxml
+++ b/src/main/resources/com/example/csit228_f1_v2/homepage.fxml
@@ -1,27 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csit228_f1_v2.HomeController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csit228_f1_v2.HomeController">
    <children>
-      <ComboBox layoutX="84.0" layoutY="76.0" prefWidth="150.0" />
-      <ChoiceBox layoutX="84.0" layoutY="124.0" prefWidth="150.0" />
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="386.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" />
-      <ProgressBar fx:id="pbProgress" layoutX="252.0" layoutY="334.0" prefWidth="200.0" progress="0.33" />
-      <ProgressIndicator fx:id="piProgress" layoutX="473.0" layoutY="314.0" progress="0.9" />
-      <Spinner layoutX="85.0" layoutY="175.0" />
-      <SplitMenuButton layoutX="84.0" layoutY="33.0" mnemonicParsing="false" text="SplitMenuButton">
-        <items>
-          <MenuItem mnemonicParsing="false" text="Action 1" />
-          <MenuItem mnemonicParsing="false" text="Action 2" />
-        </items>
-      </SplitMenuButton>
-      <Slider fx:id="slSlider" layoutX="352.0" layoutY="69.0" onMouseDragged="#onSliderChange" value="90.0" />
-      <ToggleButton fx:id="tbNight" layoutX="466.0" layoutY="20.0" mnemonicParsing="false" onAction="#onNightModeClick" text="Night Mode" />
-      <TreeView layoutX="386.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
-      <PieChart layoutX="200.0" layoutY="175.0" prefHeight="129.0" prefWidth="149.0" />
+      <BorderPane prefHeight="400.0" prefWidth="600.0">
+         <top>
+            <Label text="Museum of Everyday Objects" BorderPane.alignment="CENTER">
+               <font>
+                  <Font name="Impact" size="36.0" />
+               </font>
+            </Label>
+         </top>
+         <center>
+            <ScrollPane fx:id="toDisplay" onMouseClicked="#OpenModal" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+         </center>
+         <right>
+            <VBox alignment="CENTER" prefHeight="355.0" prefWidth="117.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label text="Share Your" />
+                  <Label text="Everyday Objects " />
+                  <Label text="With Us!" />
+                  <Button fx:id="Create" mnemonicParsing="false" onAction="#OpenModal" text="Create!">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
+         </right>
+      </BorderPane>
    </children>
 </AnchorPane>
