--- a/src/main/resources/com/example/csit228_f1_v2/modal.fxml
+++ b/src/main/resources/com/example/csit228_f1_v2/modal.fxml
@@ -7,9 +7,7 @@
 <?import javafx.scene.layout.*?>
 
 
-    <AnchorPane xmlns="http://javafx.com/javafx"
-                xmlns:fx="http://javafx.com/fxml"
-                 fx:id="modalPane" styleClass="modal-pane" prefHeight="200" prefWidth="300">
-            <Button text="Close" onAction="handleClose" layoutX="230" layoutY="150" />
-        <Label fx:id="modalLabel" text="This is a modal content" layoutX="20" layoutY="20" />
-    </AnchorPane>
+<AnchorPane fx:id="modalPane" styleClass="modal-pane" prefHeight="200" prefWidth="300" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+    <Button text="Close" onAction="#handleClose" layoutX="230" layoutY="150" />
+    <Label fx:id="modalLabel" text="This is a modal content" layoutX="20" layoutY="20" />
+</AnchorPane>
